--- a/LeckerBag/WebContent/Konfigurator_Seite2.html
+++ b/LeckerBag/WebContent/Konfigurator_Seite2.html
@@ -181,7 +181,7 @@
                                     <div class="row">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right" data-pg-collapsed>
                                             <button type="button" class="btn btn-default button_paulo button_paulo_3">Abbrechen</button>
-                                            <button type="button" class="btn btn-default button_paulo" onclick="location.href='mein_profil_lieferant.html'">Fertig</button>                                             
+                                            <button type="button" class="btn btn-default button_paulo" onclick="location.href='dashboard_lieferant.html'">Fertig</button>                                             
                                         </div>
                                     </div>
                                 </div>
