--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -55,7 +55,7 @@
                     <div class="row" data-pg-collapsed>
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Mein Leckerbag</h3> 
-                            <p>Herzlich Willkommen <font class="beschreibung">Martin Müller - MüllerBäck!</font></p> 
+                            <p>Herzlich Willkommen <font class="beschreibung">Martin Müller - Sandertorbäck!</font></p> 
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -69,7 +69,7 @@
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Mein Profil</h4>
-                                    <h5>Ihre persönlichen Daten</h5>
+                                    <h5>Perrsönlichen Daten</h5>
                                     <ul class="pg-empty-placeholder" data-pg-collapsed>
                                         <li class="list_text">
                                             <a color="#5b586b" href="mein_profil_lieferant.html">Profil ansehen</a>
@@ -81,7 +81,7 @@
                                             <a color="#23527c">Profil löschen</a>
                                         </li>
                                     </ul>
-                                    <h5>Ihre Lieferorte</h5>
+                                    <h5>Lieferorte</h5>
                                     <ul class="pg-empty-placeholder" data-pg-collapsed>
                                         <li class="list_text">
                                             <a href="schulen_bearbeiten_lieferant.html">Lieferort hinzufügen</a>
@@ -93,7 +93,7 @@
                                             <a color="#5b586b" href="mein_profil_lieferant.html">Lieferort(e) bearbeiten</a>
                                         </li>
                                     </ul>
-                                    <h5>Ihre Produkte</h5>
+                                    <h5>Produkte</h5>
                                     <ul class="pg-empty-placeholder">
                                         <li class="list_text">
                                             <a href="Konfigurator_Seite1.html">Produktkonfiguration starten</a>
@@ -167,12 +167,12 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                             </div>
                         </div>
                     </div>
-                    <div class="row" data-pg-collapsed>
+                    <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
                                     <h4>Meine Lieferungen</h4>
-                                    <h5>Ihre nächsten Lieferungen</h5>
+                                    <h5>Die nächsten Lieferungen</h5>
                                     <div class="row" data-pg-collapsed>
                                         <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12" id="scheduler_dashboard_lieferant" data-pg-collapsed></div>
                                         <div class="col-md-7 col-lg-7 col-sm-12 col-xs-12" id="datasHolder_dashboard_lieferant" style="display:none" data-pg-collapsed>
@@ -226,7 +226,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Meine Stornierungen</h4>
-                                    <h5>Ihre letzten Stornierungen</h5>
+                                    <h5>Die letzten Stornierungen</h5>
                                     <div class="row" id="dashboard_stornierungen_tb_holder">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right option_dashboard_lieferant_1" data-pg-collapsed="">
                                             <button type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="">
@@ -514,7 +514,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Meine Kennzahlen</h4>
-                                    <h5>Ihre aktuellen Kennzahlen</h5>
+                                    <h5>Aktuelle Kennzahlen</h5>
                                     <div class="row">
                                         <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
                                             <div class="donut"></div>
