--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -70,27 +70,21 @@
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Mein Profil</h4>
                                     <h5>Perrsönlichen Daten</h5>
-                                    <ul class="pg-empty-placeholder" data-pg-collapsed>
+                                    <ul class="pg-empty-placeholder">
                                         <li class="list_text">
                                             <a color="#5b586b" href="mein_profil_lieferant.html">Profil ansehen</a>
-                                        </li>
-                                        <li class="list_text">
-                                            <a color="#5b586b">Profil bearbeiten</a>
                                         </li>
                                         <li class="list_text"> 
                                             <a color="#23527c">Profil löschen</a>
                                         </li>
                                     </ul>
                                     <h5>Lieferorte</h5>
-                                    <ul class="pg-empty-placeholder" data-pg-collapsed>
+                                    <ul class="pg-empty-placeholder">
                                         <li class="list_text">
                                             <a href="schulen_bearbeiten_lieferant.html">Lieferort hinzufügen</a>
                                         </li>
                                         <li class="list_text">
                                             <a>Lieferort(e) ansehen</a>
-                                        </li>
-                                        <li class="list_text">
-                                            <a color="#5b586b" href="mein_profil_lieferant.html">Lieferort(e) bearbeiten</a>
                                         </li>
                                     </ul>
                                     <h5>Produkte</h5>
