--- a/LeckerBag/WebContent/header.html
+++ b/LeckerBag/WebContent/header.html
@@ -15,12 +15,15 @@
     <body>
         <div class="row">
             <div class="col-md-12 col-lg-12">
-                <div class="row" data-pg-collapsed>
-                    <div class="text-right col-md-12" id="nav_sn">
+                <div class="row">
+                    <div class="col-md-2 col-sm-2 col-lg-2 col-xs-2 nav_sn">
+                        <a href="#" class="nav_sn_link" style="margin-left:15px;"><i class="fa fa-adjust"></i></a>                          
+                    </div>
+                    <div class="text-right col-md-10 col-sm-10 col-xs-10 col-lg-10 nav_sn">
                         <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="nav_sn_link"><i class="fa fa-twitter"></i></a>
                         <a href="#" class="nav_sn_link"><i class="fa fa-google-plus"></i></a>
-                        <a href="#" class="nav_sn_link"><i class="fa fa-tumblr"></i></a> 
+                        <a href="#" class="nav_sn_link" style="margin-right:15px;"><i class="fa fa-tumblr"></i></a> 
                     </div>                     
                 </div>
                 <div class="row" id="logo"> 
@@ -69,13 +72,10 @@
                                                     </ul>                                                     
                                                 </div>
                                             </div>                                             
-
                                             <!-- container -->
                                         </div>                                         
-
                                         <!-- navbar-inner -->
                                     </div>                                     
-
                                     <!-- navbar -->
                                 </div>                                 
                             </div>                             
